Bug 413768 - Clicking in almost any input type='text' when the Keychain is locked will prompt.  Patch by Bryan Atwood <batwood.bugs@gmail.com>, r=smorgan, sr=mento.